--- a/app/views/admin/consultations/_form.html.erb
+++ b/app/views/admin/consultations/_form.html.erb
@@ -43,8 +43,7 @@
     </div>
 
     <fieldset>
-      <legend>Associations</legend>
-      <p>You'll be able to select specialist sectors later.</p>
+      <legend>Specialist topic tags</legend>
       <div class="js-external-url-set">
         <%= render 'appointment_fields', form: form, edition: edition %>
       </div>
