--- a/app/views/admin/detailed_guides/_form.html.erb
+++ b/app/views/admin/detailed_guides/_form.html.erb
@@ -6,8 +6,7 @@
   <%= standard_edition_form(edition, @information) do |form| %>
 
     <fieldset>
-      <legend>Associations</legend>
-      <p>You'll be able to select specialist sectors later.</p>
+      <legend>Specialist topic tags</legend>
       <%= render partial: 'organisation_fields', locals: { form: form, edition: edition } %>
 
       <%= render "topical_event_fields", form: form, edition: edition %>
