--- a/app/views/admin/editions/_show_metadata.html.erb
+++ b/app/views/admin/editions/_show_metadata.html.erb
@@ -45,17 +45,17 @@
   </section>
 <% end %>
 
-<%= render partial: '/admin/shared/tagging/show_topics_box', locals: {
+<%= render partial: '/admin/shared/tagging/show_tags_box', locals: {
   path_to_edit_tags: edit_admin_edition_tags_path(@edition.id),
   selected_taxon_paths: @edition_taxons.map(&:full_path),
-  no_topics_message: 'No topics - please add a topic before publishing'
+  no_topics_message: 'No tags - please add a tags before publishing'
 } %>
 
 
 <%= render partial: '/admin/shared/tagging/legacy_associations_box', locals: {
   path_to_edit_associations: edit_admin_edition_legacy_associations_path(@edition.id),
   edition: @edition,
-  no_associations_message: 'No associations'
+  no_associations_message: 'No specialist topic tags'
 } %>
 
 <% if @edition.can_be_tagged_to_worldwide_taxonomy? %>
