--- a/app/views/admin/news_articles/_form.html.erb
+++ b/app/views/admin/news_articles/_form.html.erb
@@ -9,8 +9,7 @@
     <%= render 'inline_attachments_info', form: form, edition: edition %>
 
     <fieldset>
-      <legend>Associations</legend>
-      <p>You'll be able to select specialist sectors later.</p>
+      <legend>Specialist topic tags</legend>
       <%= render 'appointment_fields', form: form, edition: edition %>
       <%= render 'topical_event_fields', form: form, edition: edition %>
       <%= render 'worldwide_organisation_fields', form: form, edition: edition %>
