--- a/app/views/admin/organisations/_form.html.erb
+++ b/app/views/admin/organisations/_form.html.erb
@@ -70,7 +70,7 @@
     <% end %>
   </fieldset>
   <fieldset>
-    <legend>Associations</legend>
+    <legend>Specialist topic tags</legend>
     <%= hidden_field_tag "organisation[parent_organisation_ids][]", "", id: "organisation_parent_organisation_ids_default" %>
     <p>
       <%= organisation_form.label :parent_organisation_ids, 'Sponsoring organisations' %>
