--- a/app/views/admin/shared/tagging/_breadcrumb_list.mustache
+++ b/app/views/admin/shared/tagging/_breadcrumb_list.mustache
@@ -7,7 +7,7 @@
   </ol>
   <button type="button"
           class="close deselect-taxon-button"
-          aria-label="Deselect topic">
+          aria-label="Deselect tag">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
