--- a/app/views/admin/supporting_pages/_form.html.erb
+++ b/app/views/admin/supporting_pages/_form.html.erb
@@ -10,7 +10,7 @@
     </div>
 
     <fieldset>
-      <legend>Associations</legend>
+      <legend>Specialist topic tags</legend>
       <%= render partial: 'specialist_sector_fields', locals: { form: form, edition: edition } %>
     </fieldset>
   <% end %>
