--- a/app/views/admin/fatality_notices/_form.html.erb
+++ b/app/views/admin/fatality_notices/_form.html.erb
@@ -6,7 +6,7 @@
   <%= standard_edition_form(edition, @information) do |form| %>
 
     <fieldset>
-      <legend>Associations</legend>
+      <legend>Specialist topic tags</legend>
       <p>You'll be able to specialist sectors later.</p>
       <%= render partial: 'organisation_fields', locals: { form: form, edition: edition } %>
       <%= render partial: 'appointment_fields', locals: { form: form, edition: edition } %>
