--- a/app/views/admin/publications/_form.html.erb
+++ b/app/views/admin/publications/_form.html.erb
@@ -10,7 +10,7 @@
     <%= render 'html_version_fields', form: form, edition: edition %>
 
     <fieldset>
-      <legend>Associations</legend>
+      <legend>Specialist topic tags</legend>
       <p>You'll be able to select Topics and Specialist Sectors later.</p>
       <%= render 'appointment_fields', form: form, edition: edition %>
       <%= render 'statistical_data_set_fields', form: form, edition: edition %>
