--- a/app/views/admin/statistical_data_sets/_form.html.erb
+++ b/app/views/admin/statistical_data_sets/_form.html.erb
@@ -10,8 +10,7 @@
     <%= render partial: 'inline_attachments_info', locals: { form: form, edition: edition } %>
 
     <fieldset>
-      <legend>Associations</legend>
-      <p>You'll be able to select specialist sectors later.</p>
+      <legend>Specialist topic tags</legend>
       <%= render partial: 'organisation_fields', locals: { form: form, edition: edition } %>
     </fieldset>
   <% end %>
